--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/Project/v16/Browse.VC.db
+/.vs/Project/v16/Browse.VC.opendb
